OpenLab Gradebook: make sure student tools dropdown is visible

--- a/wp-content/plugins/openlab-gradebook/GradeBook.less
+++ b/wp-content/plugins/openlab-gradebook/GradeBook.less
@@ -969,6 +969,7 @@ span.twitter-typeahead {
 			#students td.student-tools {
 				max-width: 50px;
 				min-width: 50px;
+				overflow: visible;
 				button#download-csv-mobile {
 					background: #0073aa;
 					font-size: 22px;
